# static-assertions

./: Cargo.toml  rustfmt.toml
proc/: Cargo.toml
proc/tests/: size.rs
tests/: const.rs  eq_size.rs  fields.rs  obj_safe.rs  trait_impl.rs  type_eq.rs  type_ne.rs
