[package]
name = "proc_static_assertions_next"
version = "0.0.1"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/scuffletv/static-assertions"
repository = "https://github.com/scuffletv/static-assertions"
documentation = "https://docs.rs/proc_static_assertions_next"
categories = ["no-std", "rust-patterns", "development-tools::testing"]
keywords = ["assert", "static", "testing"]
description = "Compile-time assertions via procedural macros."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]
edition = "2021"

[lib]
proc-macro = true

[features]
nightly = []
